# anari-brdf-explorer

./: CMakeLists.txt  ParamEditor.cpp  ParamEditor.h  PluginLoader.cpp  PluginLoader.h  README.md  VisionarayMaterial.cpp  VisionarayMaterial.h  brdfExplorer.cpp  material.cpp  material.h
plugins/: CMakeLists.txt  VisionarayMaterial.cpp  VisionarayMaterial.h
